<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.aliimran.games.game2048.MenuActivity$PlaceholderFragment"
    android:background="@color/beige" >
    


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textStyle="bold"
        android:textColor="@color/darkbrown"
        android:textSize="80sp"
        android:text="@string/app_name" />
    
    <Button 
        android:id="@+id/button_classic"
        android:layout_height="wrap_content"
        android:layout_width="200dp"
        android:text="@string/classic"
        android:layout_gravity="center"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:background="@drawable/button_classic"
        android:layout_margin="5dp"/>

    <Button 
        android:id="@+id/button_time"
        android:layout_height="wrap_content"
        android:layout_width="200dp"
        android:text="@string/time"
        android:layout_gravity="center"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:background="@drawable/button_time_trial"
        android:layout_margin="5dp"/>
        
    <Button 
        android:id="@+id/button_endless"
        android:layout_height="wrap_content"
        android:layout_width="200dp"
        android:text="@string/endless"
        android:layout_gravity="center"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:background="@drawable/button_endless"
        android:layout_margin="5dp"/>
    
	<Button 
        android:id="@+id/button_about"
        android:layout_height="wrap_content"
        android:layout_width="200dp"
        android:text="@string/about"
        android:layout_gravity="center"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:background="@drawable/button_about"
        android:layout_marginTop="40dp"/>

</LinearLayout>
